--- a/css/style.scss
+++ b/css/style.scss
@@ -5,7 +5,7 @@
     padding: 0;
     box-sizing: border-box;
 } 
- 
+
 canvas {
     display: block; 
 }    
@@ -17,4 +17,34 @@ canvas {
     z-index: -1;
     width: 100vw;
     height: 100vh;
+}
+
+.box {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+}
+
+.inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 220px;
+    height: 440px;
+
+    &::before,
+    &::after { 
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 50%;
+        background-image: linear-gradient(to bottom, green 200px, red 200px);
+    }
+
+    &::after {
+        top: 50%;
+    }
 }
